packages/components/src/components/Table/Table.scss
/*
Copyright 2019 The Tekton Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

@import '~@tektoncd/dashboard-components/dist/scss/vars';

.tableComponent {

  .bx--table-toolbar {
    background: transparent;
  }

  .bx--data-table-header{
    padding-left: 0;
    padding-bottom: 0;
  }

  .bx--data-table-container{
    margin-top: 0;
    width: 100%;
  }

  .bx--data-table thead th {
    padding: 15;
  }

  .bx--data-table thead th{
    background: $ui-background;
    border-bottom: 1px solid $ui-03;
  }

  .noRows {
    width: 100%;
    text-align: center;
    margin-top: 5px;
    font-style: italic;
    font-size: 1rem;
  }

  .bx--batch-actions--active {
    justify-content: flex-end;
    visibility: visible !important;
  }

  .bx--batch-actions {
    visibility: hidden;
  }
}

